--- a/Portforio/css/style-contact.css
+++ b/Portforio/css/style-contact.css
@@ -77,7 +77,7 @@ hr{
 /*ここからcontact*/
 
 .contact-wrapper{
-	background-color: #CCFFFF;
+	/*background-color: #CCFFFF;*/
 	width: 100%;
 	margin-top: 80px;
 }
